# disopy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  TODO.md  compose.yaml  flake.nix  justfile  pyproject.toml  test.opus
.github/workflows/: ghcr.yml  publish.yml
config/: config.toml
dev/config/: config.toml
src/disopy/: __init__.py  __main__.py  authentication.py  config.py  config_loader.py  config_saver.py  discord.py  env.py  logging.py  main.py  messages.py  options.py  queue.py  subsonic.py
src/disopy/cogs/: base.py  misc.py  queue.py  search.py
