[tool.poetry]
name = "Disopy"
version = "1.0.0"
description = "A basic Discord bot to listen music using the Subsonic API"
authors = ["kutu-dev"]
license = "MIT License"
readme = "README.md"
keywords = ["web", "utility", "automation"]
homepage = "https://github.com/kutu-dev/unipropic"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Internet",
    "Environment :: Web Environment"
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
"discord.py" = {extras = ["voice"], version = "^2.3.1"}
colorama = "^0.4.6"

[tool.poetry.scripts]
disopy = "disopy.main:main"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
