[project]
name = "disopy"
description = "A Discord bot for listening music from a Subsonic server."
readme = "README.md"

dynamic = ["version"]

requires-python = ">= 3.13.0"
dependencies = [
  "knuckles>=1.1.7",
  "platformdirs>=4.3.6",
  "colorama>=0.4.6",
  "tomlkit>=0.12.0",

  "discord.py[voice]>=2.4.0",
  "audioop-lts>=0.2.1",
  "PyNaCl>=1.5.0"
]

authors = [
  {name = 'Jorge "Kutu" Dobón Blanco', email="code@dobon.dev"}
]

keywords = [
  "subsonic",
  "opensubsonic",
  "discord",
  "bot",
  "music",
  "slash-commands",
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Environment :: Web Environment",
  "Operating System :: OS Independent",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Multimedia",
  "Typing :: Typed",
]

[project.scripts]
disopy = "disopy.__main__:main"

[project.urls]
Repository = "https://github.com/kutu-dev/disopy"
Issues = "https://github.com/kutu-dev/disopy/issues"
Changelog = "https://github.com/kutu-dev/disopy/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/disopy/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "mypy",
  "ruff",
  "types-colorama",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I001"]

[tool.mypy]
strict = true
